# Wizard-s-Academy

./: .gitignore  CMakeLists.txt  README.md
Wizard Academy/: main.cpp
Wizard Academy.xcodeproj/: project.pbxproj
Wizard Academy.xcodeproj/project.xcworkspace/xcuserdata/dchottani.xcuserdatad/: UserInterfaceState.xcuserstate
Wizard Academy.xcodeproj/xcuserdata/dchottani.xcuserdatad/xcschemes/: xcschememanagement.plist
Wizard Academy/Header Files/: Camera.h  EBO.h  Mesh.h  Model.h  VAO.h  VBO.h  shader.h
Wizard Academy/Source Files/: Camera.cpp  EBO.cpp  VAO.cpp  VBO.cpp  main.cpp  shader.cpp  stb_image_impl.cpp
Wizard Academy/assets/Model/castle/: de_haar_castle.mtl
Wizard Academy/assets/Model/headWizard/: dumbledore.mtl
Wizard Academy/assets/Model/leaves/: birch_leaf.mtl  falling_leaves.mtl
Wizard Academy/assets/Model/particle/: uttm_glow.mtl
Wizard Academy/assets/Model/skybox/: free_skybox_fantasy_lands_cloudy_space.mtl
Wizard Academy/assets/Model/statue/: pbr_stylized_statue_-_mage__wizard.mtl
Wizard Academy/assets/Model/wizard/: elf_wizard.mtl
Wizard Academy/assets/Model/wizard1/: draco_malfoy_cos_ps2.mtl
Wizard Academy/assets/Model/wizard2/: harry_potter_cos_ps2.mtl
Wizard Academy/assets/Model/wizard3/: hermione_granger_cos_gamecubexbox.mtl
Wizard Academy/assets/Model/wizard4/: ron_weasley_cos_ps2.mtl
Wizard Academy/shaders/: basic.frag  basic.fs  basic.vs  particle.vert  skybox.frag  skybox.vert
libs/include/assimp/: revision.h
libs/include/glad/: glad.h
libs/src/: glad.c
